update method report
